--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@huggingface/inference": "^4.7.1",
     "@langchain/community": "^0.3.53",
     "@langchain/core": "^0.3.72",
+    "@langchain/google-genai": "^0.2.16",
     "@tanstack/react-query": "^5.85.5",
     "@trpc/next": "^11.5.0",
     "@trpc/react-query": "^11.5.0",
